--- a/xpi/content/css/linux/classictabsextrac2.css
+++ b/xpi/content/css/linux/classictabsextrac2.css
@@ -40,5 +40,12 @@
 	  box-shadow:none !important;
       border-bottom:0px solid transparent !important;
 	}
+	
+	#TabsToolbar toolbarbutton{
+	  margin-top:0 !important;
+	  margin-bottom:0 !important;
+	  padding-top:0 !important;
+	  padding-bottom:0 !important;
+	}
 
 }
