--- a/xpi/content/css/winaero/classictabsextra.css
+++ b/xpi/content/css/winaero/classictabsextra.css
@@ -54,12 +54,17 @@
 	  -moz-padding-start: 0px !important;
 	}
 	
+	/* Private Tab add-on */
+	#main-window[colorfultabs="true"] #TabsToolbar:not([orient="vertical"]) .tabs-newtab-button + .tabs-newtab-button{
+	  -moz-margin-start: 0px !important;
+	}
+	/**/
+	
 	@media not all and (-moz-windows-classic) {
-
+		
 		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) .tabs-newtab-button + .tabs-newtab-button{
-          -moz-margin-start: 0px !important;
+		  -moz-margin-start: 0px !important;
 		}
-
 		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) .tabs-newtab-button{
 		  -moz-margin-end: 0px !important;
 		}
