--- a/xpi/content/css/tabs_squared-osx2.css
+++ b/xpi/content/css/tabs_squared-osx2.css
@@ -294,6 +294,13 @@
 	  -moz-margin-start: 15px !important;
 	}
 
+	/* ColorfulTabs tweak*/
+	#main-window[colorfultabs="true"] #TabsToolbar .tabbrowser-tab{
+	  border-top:0 !important;
+	  border-left:0 !important;
+	  border-right:0 !important;
+	}
+
 }
 
 @-moz-document url(chrome://classic_theme_restorer/content/options.xul) {
