--- a/xpi/content/css/win8/appbuthigherpositionextra.css
+++ b/xpi/content/css/win8/appbuthigherpositionextra.css
@@ -4,14 +4,15 @@
 
 	#main-window[tabsintitlebar][sizemode="normal"]:not([tabsontop="false"]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar #ctraddon_appbutton{
 	  margin-top:-16px !important;
-	  margin-bottom:22px !important;
+	  margin-bottom:20px !important;
+	  -moz-margin-end:1px !important;
 	  border-radius: 0 0 4px 4px !important;
 	}
 	#main-window[tabsintitlebar][sizemode="maximized"]:not([tabsontop="false"]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar #ctraddon_appbutton{
-	  margin-top:-4px !important;
-	  -moz-margin-start:-2px !important;
+	  margin-top:-2px !important;
+	  -moz-margin-start:0px !important;
 	  -moz-margin-end:2px !important;
-	  margin-bottom:10px !important;
+	  margin-bottom:8px !important;
 	  border-radius: 0 0 4px 4px !important;
 	}
 
