--- a/xpi/content/css/win8/classictabsextra2.css
+++ b/xpi/content/css/win8/classictabsextra2.css
@@ -54,6 +54,7 @@
 	  -moz-padding-start: 0px !important;
 	}
 	
+	#main-window[colorfultabs="true"] #TabsToolbar:not([orient="vertical"]) .tabs-newtab-button + .tabs-newtab-button,
 	#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) .tabs-newtab-button + .tabs-newtab-button{
       -moz-margin-start: 0px !important;
 	}
