--- a/xpi/content/css/panelmenu_nolabels.css
+++ b/xpi/content/css/panelmenu_nolabels.css
@@ -4,4 +4,7 @@
 	#PanelUI-contents label {
 	  visibility: collapse !important;
 	}
+	#PanelUI-contents #zoom-reset-button label {
+	  visibility: visible !important;
+	}
 }
