--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -490,6 +490,7 @@
 	  max-width: 122px !important;
 	}
 	
+	#ctraddon_pw_tab_ctabheight,
 	#ctraddon_pw_tabMinWidth,
 	#ctraddon_pw_tabMaxWidth{
 	  width:60px !important;
