--- a/xpi/content/css/feedinurl.css
+++ b/xpi/content/css/feedinurl.css
@@ -35,6 +35,22 @@
 	#main-window toolbar #urlbar-icons #feed-button:hover {
 	  opacity: 1.0 !important;
 	}
+	
+	/* support for text and icons+text modes */
+	toolbar #urlbar-icons #feed-button .toolbarbutton-text {
+	  display: none !important;
+	}
+	toolbar #urlbar-icons #feed-button {
+	  -moz-box-orient: unset !important;
+	}
+	toolbar #urlbar-container #urlbar #urlbar-icons #feed-button .toolbarbutton-icon {
+	  visibility: visible !important;
+	}
+	
+	/**/
+	#urlbar-icons #feed-button .toolbarbutton-icon { 
+	  filter: none !important;
+	}
 
 	/* Flagfox support */
 	#flagfox-button{
