--- a/xpi/content/css/mac/overlayextra.css
+++ b/xpi/content/css/mac/overlayextra.css
@@ -227,6 +227,7 @@
 	#ctraddon_appbutton_list2{
 	  visibility: visible !important;
 	}
+	#ctraddon_pw_nbcompact,
 	#ctraddon_pw_menubargroup,
 	#ctraddon_pw_menubarnofog,
 	#ctraddon_pw_altmenubar,
