--- a/xpi/content/css/mode_txtonly.css
+++ b/xpi/content/css/mode_txtonly.css
@@ -100,9 +100,13 @@
 	  visibility: collapse !important;
 	}
 	
-	/*call button*/
+	/* Main menu button & call button fix */
+	toolbar #PanelUI-menu-button .toolbarbutton-badge,
+	toolbar #PanelUI-menu-button .toolbarbutton-badge-container,
 	toolbar #loop-button .toolbarbutton-badge,
-	toolbar #loop-button .toolbarbutton-badge-container{
+	toolbar #loop-button .toolbarbutton-badge-container,
+	toolbar #loop-button-throttled .toolbarbutton-badge,
+	toolbar #loop-button-throttled .toolbarbutton-badge-container{
 	  -moz-appearance:none !important;
 	  background:none !important;
 	  border:0 !important;
