--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -34,7 +34,7 @@
 	}
 
 	#navigator-toolbox #nav-bar #back-button > .toolbarbutton-icon{
-	  padding: 2px 0px !important;
+	  padding: 3px 0px !important;
       margin: 0px 0px !important;
 	}
 	
@@ -199,6 +199,16 @@
 	  margin-top: 2px !important;
 	  margin-bottom: 2px !important;
 	}
+	
+	/* default badge buttons: loop/panelUI */
+	#nav-bar #PanelUI-menu-button .toolbarbutton-badge,
+	#nav-bar #PanelUI-menu-button .toolbarbutton-badge-container,
+	#nav-bar #loop-button .toolbarbutton-badge,
+	#nav-bar #loop-button .toolbarbutton-badge-container,
+	#nav-bar #loop-button-throttled .toolbarbutton-badge,
+	#nav-bar #loop-button-throttled .toolbarbutton-badge-container{
+	  padding:0 !important;
+	}
 
 	/*buttons with SVG images*/
 	#nav-bar .toolbarbutton-1[image$="svg"] .toolbarbutton-icon {
@@ -227,6 +237,11 @@
 	/* Ghostery */
 	#nav-bar #ghostery-button .toolbarbutton-icon {
 	  margin-top:2px !important;
+	}
+	#nav-bar #ghostery-button-badge{
+	  margin-bottom:-3px !important;
+	  -moz-margin-end: 0px !important;
+	  padding: 0px !important;
 	}
 
 	/* zoom page add-on */
