--- a/xpi/content/css/winaero/mode_icons_big_extra.css
+++ b/xpi/content/css/winaero/mode_icons_big_extra.css
@@ -137,8 +137,9 @@
 	  -moz-padding-start: 2px !important;
 	  transition: none !important;
 	}
-
-	#nav-bar #loop-call-button[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image {
+	
+	#nav-bar #loop-button-throttled[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image ,
+	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image {
 	  min-width:30px !important;
 	  height:30px !important;
 	}
