--- a/xpi/content/css/appbutton2io.css
+++ b/xpi/content/css/appbutton2io.css
@@ -90,5 +90,18 @@
 	
 	  }
 	}
+	
+	/* for LavaFox themes */
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen]) #toolbar-menubar ~ #TabsToolbar,
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar][sizemode="normal"]:not([inFullscreen]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+	  margin-top: 0px !important;
+	}
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar][sizemode="normal"] #titlebar:not([hidden]) ~ * #toolbar-menubar {
+	 -moz-margin-start: 0px !important;
+	}
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar][chromehidden~="menubar"][sizemode="maximized"]:not([tabsontop="false"]) #toolbar-menubar ~ #TabsToolbar,
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar][sizemode="maximized"]:not([tabsontop="false"]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+	 -moz-margin-start: 32px !important;
+	}
 
 }
