--- a/xpi/content/css/win8/tabsontop_offextra.css
+++ b/xpi/content/css/win8/tabsontop_offextra.css
@@ -40,5 +40,13 @@
 	#main-window[defaultfxtheme="true"][fx32plus="true"][tabsontop="false"] #TabsToolbar:not(:-moz-lwtheme) {
 	  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important;
 	}
+	
+	/* for LavaFox themes */
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar]:not([inFullscreen])[sizemode="normal"] #navigator-toolbox #toolbar-menubar[autohide="true"][inactive="true"]{
+	  margin-top: 0px !important;
+	}
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar]:not([inFullscreen])[sizemode="maximized"] #navigator-toolbox #toolbar-menubar[autohide="true"][inactive="true"]{
+	  margin-top: 8px !important;
+	}
 
 }
