--- a/xpi/content/css/winaero/tabsontop_offextra.css
+++ b/xpi/content/css/winaero/tabsontop_offextra.css
@@ -92,5 +92,13 @@
 		  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important; /*#aabccf*/
 	    }
 	}
+	
+	/* for LavaFox themes */
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar]:not([inFullscreen])[sizemode="normal"] #navigator-toolbox #toolbar-menubar[autohide="true"][inactive="true"]{
+	  margin-top: 0px !important;
+	}
+	#main-window[currenttheme^="LavaFox"][tabsintitlebar]:not([inFullscreen])[sizemode="maximized"] #navigator-toolbox #toolbar-menubar[autohide="true"][inactive="true"]{
+	  margin-top: 8px !important;
+	}
 
 }
