--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -596,7 +596,7 @@
 	.ctraddontabpanel[selected="true"] {
 	  visibility: visible;
 	}
-	
+	#ctraddon_pw_tabs_tabpanels tabpanel checkbox,
 	#ctraddon_pw_tabs_tabpanels tabpanel groupbox {
 	  max-width:400px !important;
 	}
@@ -698,6 +698,12 @@
 
 	#ctraddon_pw_loopcall label {
 	  background:url('chrome://classic_theme_restorer/content/images/loopcall.png') no-repeat left !important;
+	  -moz-padding-start:20px !important;
+	  min-height:16px !important;
+	}
+	
+	#ctraddon_pw_noresizerxp label {
+	  background:url('chrome://classic_theme_restorer/content/images/resizer.png') no-repeat left !important;
 	  -moz-padding-start:20px !important;
 	  min-height:16px !important;
 	}
