--- a/xpi/content/css/linux/classictabsextrac2.css
+++ b/xpi/content/css/linux/classictabsextrac2.css
@@ -47,5 +47,11 @@
 	  padding-top:0 !important;
 	  padding-bottom:0 !important;
 	}
+	
+	/* toolbar buttons should not increase tab height */
+	#TabsToolbar toolbarbutton{
+	  padding-top:0 !important;
+	  padding-bottom:0 !important;
+	}
 
 }
